--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,10 +2,12 @@
 <html>
 <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="/dist/css/style.css"/>
 </head>
 <body>
-    <div>该条数据来自于服务器:路由index</div>
     <div id="app"></div>
 </body>
+   <script src="/assets/js/react.js"></script>
+   <script src="/assets/js/react-dom.js"></script>
    <script src="/dist/js/index.js"></script>
 </html>
