页面跳转采用后端路由控制【感觉还是react-router比较合适，但是和目前在做项目不符，就先采用此方式】

--- a/client/src/style/cover.less
+++ b/client/src/style/cover.less
@@ -1,4 +1,18 @@
+//总体布局
+
+
+
 //菜单
+.logo{
+    float:left;
+    width:80px;
+    height:46px;
+    margin:5px 0;
+    img{
+        width:90px;
+        height:46px;
+    }
+}
 .avatar{
     position:relative;
     float:left;
@@ -11,3 +25,14 @@
         width: 100%;
     }
 }
+
+
+//美化webkit内核滚动条
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #777;
+}
+
