各个入口引用对应CSS，尝试打包公共CSS，但是还没有找到方法

--- a/server/views/timePicker.ejs
+++ b/server/views/timePicker.ejs
@@ -9,5 +9,5 @@
 </body>
    <script src="/assets/js/react.js"></script>
    <script src="/assets/js/react-dom.js"></script>
-   <script src="/dist/js/index.js"></script>
+   <script src="/dist/js/timePicker.js"></script>
 </html>
