--- a/server/views/uiButton.ejs
+++ b/server/views/uiButton.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/dist/css/style.css"/>
+    <link rel="stylesheet" href="/dist/css/uiButton.css"/>
 </head>
 <body>
     <div id="app"></div>
