--- a/server/views/uiIcon.ejs
+++ b/server/views/uiIcon.ejs
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/dist/css/timePicker.css"/>
+    <link rel="stylesheet" href="/dist/css/uiIcon.css"/>
 </head>
 <body>
     <div id="app"></div>
 </body>
    <script src="/assets/js/react.js"></script>
    <script src="/assets/js/react-dom.js"></script>
-   <script src="/dist/js/index.js"></script>
+   <script src="/dist/js/uiIcon.js"></script>
 </html>
