完善功能，配置模板让后端配置title

--- a/server/views/timePicker.ejs
+++ b/server/views/timePicker.ejs
@@ -6,7 +6,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>timePicker</title>    
+    <title><%=title%></title>    
+     
      
        <link href = "/dist/css/timePicker.css" rel="stylesheet">
      
