--- a/server/views/uiButton.ejs
+++ b/server/views/uiButton.ejs
@@ -6,7 +6,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>uiButton</title>    
+    <title><%=title%></title>    
+     
      
        <link href = "/dist/css/uiButton.css" rel="stylesheet">
      
