--- a/server/views/uiIcon.ejs
+++ b/server/views/uiIcon.ejs
@@ -6,7 +6,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>uiIcon</title>    
+    <title><%=title%></title>    
+     
      
        <link href = "/dist/css/uiIcon.css" rel="stylesheet">
      
