--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,7 +6,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>index</title>    
+    <title><%=title%></title>    
+     
      
        <link href = "/dist/css/index.css" rel="stylesheet">
      
