--- a/client/src/style/cover.less
+++ b/client/src/style/cover.less
@@ -1,7 +1,5 @@
 //总体布局
 
-
-
 //菜单
 .logo{
     float:left;
@@ -36,3 +34,28 @@
   background-color: #777;
 }
 
+//图标
+ul.icons-list{
+  list-style: none;
+  li{
+    float: left;
+    width: 10%;
+    text-align: center;
+    list-style: none;
+    cursor: pointer;
+    height: 100px;
+    transition: all .3s;
+    background-color: #fff;
+    &:hover{
+      background-color: #cccccc;
+      color: #fff;
+    }
+    i{
+      margin: 16px 0 10px;
+    }
+    span{
+      display: block;
+      text-align: center;
+    }
+  }
+}
