开始实现同构

--- a/server/views/ui/treeSelect.ejs
+++ b/server/views/ui/treeSelect.ejs
@@ -9,15 +9,18 @@
     <title><%=title%></title>    
      
      
-       <link href = "/dist/css/uiIcon.css" rel="stylesheet">
+       <link href = "/dist/css/treeSelect.css" rel="stylesheet">
      
+
 </head>
 <body>
     <div id="app"></div>
 </body>
     <script type="text/javascript" src="/assets/js/react.js"></script>
     <script type="text/javascript" src="/assets/js/react-dom.js"></script>
+
     
-        <script type="text/javascript" src= "/dist/js/uiIcon.js"></script>
+        <script type="text/javascript"  src= "/dist/js/treeSelect.js"></script>
     
+
 </html>
