--- a/server/views/UI/timePicker.ejs
+++ b/server/views/UI/timePicker.ejs
@@ -9,15 +9,18 @@
     <title><%=title%></title>    
      
      
-       <link href = "..//dist/css/timePicker.css" rel="stylesheet">
+       <link href = "/dist/css/timePicker.css" rel="stylesheet">
      
+
 </head>
 <body>
     <div id="app"></div>
 </body>
     <script type="text/javascript" src="/assets/js/react.js"></script>
     <script type="text/javascript" src="/assets/js/react-dom.js"></script>
+
     
-        <script type="text/javascript" src= "..//dist/js/timePicker.js"></script>
+        <script type="text/javascript"  src= "/dist/js/timePicker.js"></script>
     
+
 </html>
