--- a/server/views/ui/table.ejs
+++ b/server/views/ui/table.ejs
@@ -9,7 +9,7 @@
     <title><%=title%></title>    
      
      
-       <link href = "/dist/css/timePicker.css" rel="stylesheet">
+       <link href = "/dist/css/table.css" rel="stylesheet">
      
 
 </head>
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="/assets/js/react-dom.js"></script>
 
     
-        <script type="text/javascript"  src= "/dist/js/timePicker.js"></script>
+        <script type="text/javascript"  src= "/dist/js/table.js"></script>
     
 
 </html>
