--- a/template.ejs
+++ b/template.ejs
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app"><%= htmlWebpackPlugin.options.global %></div>
 </body>
     <script type="text/javascript" src="/assets/js/react.js"></script>
     <script type="text/javascript" src="/assets/js/react-dom.js"></script>
