--- a/server/views/ui/uiIcon.ejs
+++ b/server/views/ui/uiIcon.ejs
@@ -11,13 +11,26 @@
      
        <link href = "/dist/css/uiIcon.css" rel="stylesheet">
      
+     <!-- Polyfills -->
+    <!--[if lt IE 10]>
+        <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
+        <![endif]-->
+        <!--[if lte IE 11]>
+        <script src="https://as.alipayobjects.com/g/component/??es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js"></script>
+    <![endif]-->
 
 </head>
 <body>
     <div id="app"><%-global%></div>
+     <!--[if lt IE 10]>
+         <div>IE10</div>
+    <![endif]-->
+    <!--[if lte IE 11]>
+          <div>IE11</div>
+    <![endif]-->
 </body>
-    <script type="text/javascript" src="/assets/js/react.js"></script>
-    <script type="text/javascript" src="/assets/js/react-dom.js"></script>
+    <script type="text/javascript" src="/assets/js/react.min.js"></script>
+    <script type="text/javascript" src="/assets/js/react-dom.min.js"></script>
 
     
         <script type="text/javascript"  src= "/dist/js/uiIcon.js"></script>
