后端提供首屏数据，不再由前端发起请求

--- a/server/views/ui/table.ejs
+++ b/server/views/ui/table.ejs
@@ -29,8 +29,12 @@
           <div>IE11</div>
     <![endif]-->
 </body>
+    <script>
+           window.STATE = <%- JSON.stringify(state)%>;
+    </script>
     <script type="text/javascript" src="/assets/js/react.min.js"></script>
     <script type="text/javascript" src="/assets/js/react-dom.min.js"></script>
+
 
     
         <script type="text/javascript"  src= "/dist/js/table.js"></script>
